PuppyPlatform/Kubernetes/PuppyAPI_DB.yaml
apiVersion: v1
kind: Service
metadata:
  name: puppyapiservice-db-mssql
spec:
  ports:
  - port: 1433
  selector:
    app: puppyapiservice-db-mssql
  type: ClusterIP
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puppyapiservice-db-mssql
spec:
  selector:
    matchLabels:
      app: puppyapiservice-db-mssql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: puppyapiservice-db-mssql
    spec:
      containers:
      - image: mcr.microsoft.com/mssql/server:2022-latest
        name: puppyapiservice-db-mssql
        ports:
        - containerPort: 1433
          name: mssql
        volumeMounts:
        - name: mssql-persistent-storage-puppyapiservice
          mountPath: /var/lib/mssql
      volumes:
      - name: mssql-persistent-storage-puppyapiservice
        persistentVolumeClaim:
          claimName: mssql-pv-claim-puppyapiservice
